# VIX-Model

./: .env.example  .gitignore  PROJECT_SPEC.md  README.md  pyproject.toml
bot/: __init__.py  config.py  data_poller.py  db.py  feature_pipeline.py  health.py  inference.py  main.py  notifier.py  staleness.py  trade_suggester.py
data/scripts/: build_dataset.py  fetch_futures_history.py  fetch_intraday.py  fetch_spy_history.py  fetch_supplementary.py  fetch_vix_history.py
docs/: DATA.md  DEPLOYMENT.md  TRAINING.md
models/: model_manifest.json  scaler_v001_20260219.json  training_results_20260219_231726.json  training_results_20260219_231940.json  vix_xgb_revert_v001_20260219.json
tests/: test_backtest.py  test_baseline.py  test_config.py  test_db.py  test_features.py  test_inference.py  test_labeling.py  test_model_xgb.py  test_trade_suggester.py
training/: aggregation.py  backtest.py  baseline.py  dataset.py  export_onnx.py  features.py  model_hcg.py  model_xgb.py  scaler.py  train.py
